<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">扫雷英雄</string>
	<string name="bt_single">单机游戏</string>
	<string name="bt_multiple">联机游戏</string>
	<string name="bt_rank">最高纪录</string>
	<string name="bt_help">帮          助</string>
	<string name="bt_about">关          于</string>
	<string name="bt_back">返回</string>
	<string name="bt_next">下一页</string>
	<string name="bt_front">上一页</string>
	<string name="bt_quit">退          出</string>
	<string name="bt_start">开始</string>
	<string name="bt_show">蓝牙可见</string>
	<string name="bt_connect">连接</string>
	<string name="sounds_on">声音：开</string>
	<string name="sounds_off">声音：关</string>
	<string name="select_level">请选择难度</string>
	<string name="select_easy">简单</string>
	<string name="select_normal">中等</string>
	<string name="select_hard">困难</string>
	<string name="play_with_human">联机对战</string>
	<string name="server">建立游戏</string>
	<string name="client">加入游戏</string>
	<string name="server_back">返回菜单</string>
	<string name="ranking_tv">最高纪录</string>
	<string name="help_title">单机游戏玩法</string>
	<string name="help_title_two">联机游戏说明</string>
	<string name="help_content">
		* 扫雷游戏的目标就是尽快找到雷区中的所有地雷，而不允许踩到地雷 。如果挖开的是地雷，您将输掉游戏。\n\n
		* 通过单击即可挖开方块 。如果挖开的是地雷，则您输掉游戏。\n\n
		* 如果方块上出现数字 ，则表示在其周围的八个方块中共有多少颗地雷。\n\n
		* 如果想要标记您认为可能有地雷的方块 ，请长按它。\n\n
		* 在屏幕的右上方有一个小按钮-插旗/去旗，当你选择为插旗时 ，点击没打开的雷区将会是插旗操作 ，
		点击打开的数字并且周围插旗数量等于这个数字时 ， 将打开此数字周围的八个方块 ，反之，点击没打开的雷区是打开方块，点击数字同上。\n\n
		* 点击游戏界面的笑脸重新开始游戏。
		
    </string>
    <string name="help_content_two">
    	*联机对战游戏的目标是发现地雷，单击方格，如果有地雷就会进行标记，可以继续行动；如果方格中没有地雷，即打开该空 格，不能继续行动，轮到对方行动。\n\n
    	*联机游戏胜负判定：谁先挖到26颗雷，就获得胜利，另一方就失败。    \n\n						
    </string>
	<string name="bt_sure">确定</string>
	<string name="about_title">关于我们</string>
	<string name="about_detail">如果您在使用中遇到任何疑问或者问题，欢迎与我们联系，期待您的参与！</string>
	<string name="connect_us">联系我们</string>
	<string name="email">Email:app@androidcorn.com</string>
	<string name="main_page">Official Website：</string>
	<string name="waiting">waiting...</string>
	<string name="no_connect">No Connect</string>
	<string name="connecting">Connecting</string>
	<string name="connected">Connected:</string>
	<!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="dialog_title">"重要"</string>
	<string name="username_prompt">"第一次游戏，给自己取个名字吧"</string>
	<string name="prompt">"提示"</string>
	<string name="register_success">"注册成功"</string>
	<string name="loading">正在加载...</string>
		<string name="about">关于我们</string>
	<string name="intro">简介</string>
	<string name="version">版本号：0.10</string>
	<string name="designTitle">开发：</string>
	<string name="teamName">豌豆风团队</string>
	<string name="informationTitle">更多信息：</string>
	<string name="informationWeb">http://www.wanderphone.com</string>
	<string name="questionTitle">问题反馈：</string>
	<string name="questionEmail">service@wanderphone.com</string>
	<string name="attentionTitle">关注我们：</string>
	<string name="sinaBlog">新浪微博：豌豆风</string>
	<string name="qqBlog">腾讯微博：豌豆风</string>
	<string name="developmentTitle">Development：</string>
	<string name="teamEnglishName">Wanderphone Team</string>
	<string name="moreInformationTitle">More Information：</string>
	<string name="feedBack">Feedback：</string>
	<string name="websit">http://mineswipe.wanderphone.com/</string>
	<string name="go_on_game">继续游戏</string>
	<string name="select_level_again">重选难度</string>
	<string name="change_turn">现在轮到你扫雷了......</string>
	<string name="wait_other">等待对方扫雷......</string>
	<string name="win">恭喜！您赢了！</string>
	<string name="lose">您失败了！</string>
	<string name="failed_connect">网络加载失败</string>
	<string name="loading_rank">正在加载排行数据...</string>
	<string name="bt_cancel">取消</string>
	<string name="dialog_sure_quit">确认退出扫雷</string>
	<string name="sound_on">声音:开</string>
	<string name="sound_off">声音:关</string>
	<string name="vibrate_on">震动:开</string>
	<string name="vibrate_off">震动:关</string>
	<string name="set">设置</string>
	<string name="set_share">分享</string>
	<string name="set_feedback">反馈</string>
	<string name="set_sound">音效</string>
	<string name="set_vibrate">震动</string>
	<string name="set_share_content">分享此应用给自己的好友</string>
	<string name="set_feedback_content">反馈您的意见帮我们改进MineSweep</string>
	<string name="set_sound_content">触碰雷的音效</string>
	<string name="set_vibrate_content">触碰雷的震动效果</string>
	<string name="share">分享</string>
	<string name="share_content">在www.wanderphone.com上有个不错的应用叫MineSweep</string>
	<string name="string_no_play">您还没有玩过这个难度</string>
	<string name="string_rank_prompt">您目前在全国的游戏排名情况：</string>
	<string name="string_easy">简单难度：</string>
	<string name="string_normal">中等难度：</string>
	<string name="string_hard">困难难度：</string>
	<string name="string_this_score">您本次成绩是</string>
	<string name="string_best_score">您最好成绩是</string>
	<string name="string_all_country">s; 在全国排名为</string>
</resources>
