<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/mainback"
    >
<TextView
	android:id="@+id/cilent_tv1"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:gravity="center_horizontal"
    android:layout_marginTop="20dip"
    android:text="@string/no_connect"
    android:textColor="#CD2626"
    android:textSize="50sp"
    />

<Button
	android:id="@+id/cilent_bt1"
	android:layout_width="150dip"
	android:layout_height="wrap_content"
	android:layout_alignParentBottom="true"
	android:layout_alignParentLeft="true"
	android:layout_marginLeft="10dip"
	android:layout_marginBottom="15dip"
	android:text="@string/bt_connect"
	android:textColor="#7D26CD"
	/>
<Button
	android:id="@+id/cilent_bt2"
	android:layout_width="150dip"
	android:layout_height="wrap_content"
	android:layout_alignParentBottom="true"
	android:layout_alignParentRight="true"
	android:layout_marginRight="10dip"
	android:layout_marginBottom="15dip"
	android:text="@string/bt_show"
	android:textColor="#7D26CD"
	/>
</RelativeLayout>